
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct snd_soc_dai {int dev; struct hdmi_codec_daifmt* playback_dma_data; } ;
struct hdmi_codec_daifmt {int bit_clk_master; int frame_clk_master; int frame_clk_inv; int bit_clk_inv; int fmt; } ;


 int EINVAL ;
 int HDMI_AC97 ;
 int HDMI_DSP_A ;
 int HDMI_DSP_B ;
 int HDMI_I2S ;
 int HDMI_LEFT_J ;
 int HDMI_RIGHT_J ;







 unsigned int SND_SOC_DAIFMT_FORMAT_MASK ;



 unsigned int SND_SOC_DAIFMT_INV_MASK ;

 unsigned int SND_SOC_DAIFMT_MASTER_MASK ;



 int dev_err (int ,char*) ;
 int memset (struct hdmi_codec_daifmt*,int ,int) ;

__attribute__((used)) static int hdmi_codec_i2s_set_fmt(struct snd_soc_dai *dai,
      unsigned int fmt)
{
 struct hdmi_codec_daifmt *cf = dai->playback_dma_data;


 memset(cf, 0, sizeof(*cf));

 switch (fmt & SND_SOC_DAIFMT_MASTER_MASK) {
 case 140:
  cf->bit_clk_master = 1;
  cf->frame_clk_master = 1;
  break;
 case 138:
  cf->frame_clk_master = 1;
  break;
 case 139:
  cf->bit_clk_master = 1;
  break;
 case 137:
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_INV_MASK) {
 case 129:
  break;
 case 130:
  cf->frame_clk_inv = 1;
  break;
 case 132:
  cf->bit_clk_inv = 1;
  break;
 case 133:
  cf->frame_clk_inv = 1;
  cf->bit_clk_inv = 1;
  break;
 }

 switch (fmt & SND_SOC_DAIFMT_FORMAT_MASK) {
 case 134:
  cf->fmt = HDMI_I2S;
  break;
 case 136:
  cf->fmt = HDMI_DSP_A;
  break;
 case 135:
  cf->fmt = HDMI_DSP_B;
  break;
 case 128:
  cf->fmt = HDMI_RIGHT_J;
  break;
 case 131:
  cf->fmt = HDMI_LEFT_J;
  break;
 case 141:
  cf->fmt = HDMI_AC97;
  break;
 default:
  dev_err(dai->dev, "Invalid DAI interface format\n");
  return -EINVAL;
 }

 return 0;
}
